# mediapipe_practice

./: Makefile  README.md  camera_macos.py  capture_device.py  cv_util.py  demo_camera.py  face_detection.py  face_mesh.py  hands.py  holistic.py  objectron.py  pose.py  pyproject.toml  run-camera.py  run-facedetection.py  run-facemesh.py  run-hands.py  run-holistic.py  run-objectron.py  run-pose.py  run_facedetection.py  run_facemesh.py  run_hands.py  run_pose.py
