[tool.poetry]
name = "practice_mediapipe"
version = "0.1.0"
description = ""
authors = ["N.Fujiwara <Naoki.Fujiwara@sony.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mediapipe = "^0.8.3"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
